--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<p>Smart match manager</p>
+<app-menu></app-menu>
 
 <router-outlet></router-outlet>
