--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,7 @@ $smm-frontend-theme: mat-light-theme($smm-frontend-primary, $smm-frontend-accent
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+p{
+    // margin: 0 auto;
+}
