set basic components

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,8 +1,8 @@
 <div class="main_">
 
 
-<button mat-button [routerLink]="['/scales']">Всі масштаби</button>
-<button mat-button [routerLink]="['/judjes']">Всі судді</button>
-<button mat-button [routerLink]="['/matches']">Всі матчі</button>
+<button mat-button [routerLink]="['/scales']"><p>Всі масштаби</p></button>
+<button mat-button [routerLink]="['/judjes']"><p>Всі судді</p></button>
+<button mat-button [routerLink]="['/matches']"><p>Всі матчі</p></button>
 
 </div>
