--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,13 +1,22 @@
 .main_{
     width: 100%;
-    height: 50px;
+    height: 80px;
     background-color: rgba(75, 84, 128, 0.123);
     display: flex;
     justify-content: center;
-
+    
+    button{
+        height: 80px;
+        
+        p{
+            margin: 0;
+            font-size: 20px;
+        }
+    }
 
     button:hover{
         background-color: rgba(88, 28, 28, 0.164);
+        
     }
    
 }
