--- a/src/app/components/current-scale/current-scale.component.scss
+++ b/src/app/components/current-scale/current-scale.component.scss
@@ -1,47 +1,93 @@
-.main_{
+.main_ {
+  display: flex;
+  height: 93%;
+  width: 100%;
+  .left_side {
+    height: 100%;
+    width: 50%;
+    background-color: #f5f5f5;
     display: flex;
-    height: 93%;
-    width: 100%;
-    .left_side{
-        height: 100%;
-        width: 50%;
-        background-color: rgba(46, 139, 86, 0.514);
-        display: flex;
-        flex-direction: column;
-        .title{
-            text-align: center;
-            font-style: italic;
-        }
-        
-
-        .judjes_queue{
-            display: flex;
-            flex-direction: column;
-            margin-left: 100px;
-            p{
-                margin: 0;
-            }
-            
-        }
+    flex-direction: column;
+    border-right: 0.5px solid #adadad;
+    .title {
+      text-align: center;
+      font-size: 20px;
     }
-    .right_side{
-        height: 100%;
-        width: 50%;
-        background-color: rgba(70, 131, 180, 0.534);
-        
-        display: flex;
-        flex-direction: column;
 
-        .title{
-            text-align: center;
-            font-style: italic;
-        }
+    .judjes_list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 20px;
 
-        .matches_queue{
-            
-            display: flex;
-            flex-direction: column;
-
-        }
+      .judjes_element {
+        cursor: pointer;
+        box-sizing: border-box;
+        height: 50px;
+        width: 100%;
+        border: 1px solid #adadad;
+        border-radius: 8px;
+        padding-left: 15px;
+      }
     }
+  }
+  .right_side {
+    height: 100%;
+    width: 50%;
+    background-color: #f5f5f5;
+    border-left: 0.5px solid #adadad;
+    display: flex;
+    flex-direction: column;
+
+    .title {
+      text-align: center;
+      font-size: 20px;
+    }
+
+    .matches_list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 20px;
+
+      .match {
+        cursor: pointer;
+        height: 50px;
+        width: 100%;
+        padding-left: 15px;
+        box-sizing: border-box;
+        border: 1px solid #adadad;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+      }
+    }
+  }
+}
+
+.side__header {
+  padding: 15px 0;
+  margin: 0 auto;
+
+  .title {
+    text-align: center;
+    font-size: 20px;
+    padding: 10px 40px;
+    background-color: rgba(42, 9, 230, 1);
+    color: white;
+    border: none;
+    border-radius: 8px;
+  }
+
+  .side__add__btn {
+    text-align: center;
+    font-size: 20px;
+    margin-left: 10px;
+    padding: 10px 15px;
+    background-color: rgba(42, 9, 230, 1);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer; 
+  }
 }
