--- a/src/app/components/judjes/judjes.component.scss
+++ b/src/app/components/judjes/judjes.component.scss
@@ -1,10 +1,65 @@
-.main_{
-  background-color: rgba(100, 45, 45, 0.171);
-  height: 94%;
-  display: flex;
-  flex-direction: column;
 
-  p{
-    margin: 0;
+
+.main_{
+  background-color: #f5f5f5;
+  height: 94%;
+
+  .title{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-left: 30px;
+      margin-right: 30px;
+      p{
+          font-size: 26px;
+          font-family: 'Roboto', sans-serif;
+          font-weight: 500;
+      }
+
+      .button__add {
+          button{
+              padding: 5px 40px;
+              background-color: rgb(42, 9, 230);
+              color: white;
+  
+              mat-icon{
+                  font-size: 40px;
+              }
+          }
+      }
+
+  }
+  .judjes{
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      margin: 5px 20px;
+      
+      .judje{
+          margin: 10px;
+          // padding: 20px;
+          cursor: pointer;
+          height: 50px;
+          width: 48%;
+          border: 1px solid #adadad;
+          border-radius: 8px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          p{
+              margin: 0 0 0 15px;
+          }
+
+          .judje__actions {
+              button {
+                  background: none;
+                  border: none;
+                  cursor: pointer;
+              }
+          }
+      }
   }
 }
