--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,22 +1,28 @@
 .main_{
     width: 100%;
     height: 80px;
-    background-color: rgba(75, 84, 128, 0.123);
+    background-color: #f5f5f5;
     display: flex;
     justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid#adadad;
     
     button{
-        height: 80px;
-        
-        p{
-            margin: 0;
-            font-size: 20px;
-        }
+        height: 35px;
+        margin: 0;
+        font-size: 20px;
+        margin: 0 5px;
+        font-family: 'Roboto', sans-serif;
     }
 
     button:hover{
-        background-color: rgba(88, 28, 28, 0.164);
-        
+        background-color: rgb(42, 9, 230);
+        color: white;
     }
    
+}
+
+.active__btn {
+    background-color: rgb(42, 9, 230);
+    color: white;
 }
