--- a/src/app/components/scales/scales.component.scss
+++ b/src/app/components/scales/scales.component.scss
@@ -1,42 +1,64 @@
+
+
 .main_{
-    background-color: rgba(100, 45, 45, 0.171);
+    background-color: #f5f5f5;
     height: 94%;
 
     .title{
         display: flex;
         justify-content: space-between;
+        align-items: center;
         margin-left: 30px;
         margin-right: 30px;
         p{
-            font-size: 24px;
+            font-size: 26px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 500;
         }
-        mat-icon-button{
-            height: 40px;
-            width: 40px;
-            mat-icon{
-                font-size: 40px;
+
+        .button__add {
+            button{
+                padding: 5px 40px;
+                background-color: rgb(42, 9, 230);
+                color: white;
+    
+                mat-icon{
+                    font-size: 40px;
+                }
             }
         }
 
     }
     .scales{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: flex-start;
-        align-items: center;
-        margin: 10px 10px 10px  10px;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        margin: 5px 20px;
         
         .scale{
-            margin-top: 10px;
+            margin: 10px;
             // padding: 20px;
             cursor: pointer;
-            height: 100px;
-            width: 100%;
-            border: 1px double rgba(0, 0, 0, 0.452);
+            height: 50px;
+            width: 48%;
+            border: 1px solid #adadad;
+            border-radius: 8px;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
             p{
-                margin: 0;
+                margin: 0 0 0 15px;
+            }
+
+            .scale__actions {
+                button {
+                    background: none;
+                    border: none;
+                    cursor: pointer;
+                }
             }
         }
     }
